--- a/GI.ipynb
+++ b/GI.ipynb
@@ -51,8 +51,8 @@
    "outputs": [],
    "source": [
     "# # run the netWF algorithm to get the filtered GI network E_filtered # ! choose either SSS or DSS\n",
-    "# E_filtered = filter_big_var_dss(E, E_var, p=100)  # stochastic submatrix sampling (SSS)\n",
-    "# # E_filtered = filter_big_var_sss(E, E_var, 100, 427)  # deterministic submatrix sampling (DSS)\n",
+    "# # E_filtered = filter_big_var_dss(E, E_var, p=100)  # deterministic submatrix sampling (DSS)\n",
+    "# # E_filtered = filter_big_var_sss(E, E_var, 100, 427)  # stochastic submatrix sampling (SSS)\n",
     "\n",
     "# # calculate the PSN of E_filtered\n",
     "# E_filtered_sim = calculate_profile_similarity(E_filtered)"
